--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -13,18 +13,20 @@
         android:layout_margin="8dp"
         android:background="@drawable/search_view_bg"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="Search Here" />
+        app:iconifiedByDefault="false"
+        app:queryHint="Search Here..."
+        android:imeOptions="actionDone"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listPerson"
-        android:layout_width="409dp"
-        android:layout_height="636dp"
+        android:layout_width="438dp"
+        android:layout_height="771dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
         app:layout_constraintVertical_bias="0.0" />
